# imath

./: .gitignore  CMakeLists.txt  Cmakelists.txt  README.md  example.cpp  imath.h
.github/workflows/: build.yml  test.yml  test_constexpr.yml
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
tests/: CMakeLists.txt  Cmakelists.txt  clz.runtime.cpp  ctz.runtime.cpp  isPrime.constexpr.cpp  isPrime.runtime.cpp  isPrime.tests.cpp  mod128by64.runtime.cpp  mul64by64.runtime.cpp
tests/constexpr/: isPrime.constexpr.cpp
